@@ -58,7 +58,7 @@ This widget will only appear if you turned channel management to manual (see Set
 
 <!--             keyboard         -->
 <h2 align="center"> <img src="docs/Aria man2.jpg"/> <b>Piano editor</b></h2><P ALIGN=CENTER><img src="docs/Aria man3.jpg"></p><p><br/>This is the default view. It shows a simple piano roll with the notes on it.<br/><br/>To <b>add a note</b>, simply hold the mouse button down and <b>drag horizontally </b>on the track. When you release the mouse, a note will be placed where you clicked, with the length of your frag. Try it, it&#146;s easy! There is a preview to show you where the note will be when you release the mouse.<br/><br/>To <b>select</b> <b>a single note</b>, you can simply <b>click</b> on it. Selected notes appear colored in tones of yellow/green.<br/><br/>To <b>select many notes</b>, you can simply <b>drag</b> the mouse across the track. At first, it might look like Aria wants to add a new note, but don&#146;t bother. Once you have moved the mouse enough vertically, it will understand you want to select and will instead display a selection rectangle like you can see in all apps. All notes in the rectangle when you release the mouse will be selected.<br/><br/>If you have some notes already selected, and want to <b>select more</b>, hold down <b>shift</b> while selecting additionnal notes.<br/>If you have some notes already selected, but want to <b>unselected</b> specifically some of them, hold down <b>alt</b> and click on them.<br/><br/>You can <b>play selected notes</b> by pressing <b>space bar</b>.<br/><br/>To change the <b>volume</b> of a note, <b>right-click</b> on it. A pop-up window will appear. You can then either drag the slider or manually enter a value and press enter. Midi volumes range from 0 (inaudible) to 127 (loudest). If you right-click on a bunch of selected notes, it will set the volume for all notes. If you want to cancel entering anew volume, press escape.<br/><br/>The color of a note also shows its volume. Loud notes are drawn darker that soft ones.<br/><br/>To <b>move a note</b>, you can just click on it, hold the mouse button down and <b>drag</b> <b>it</b> to its new location. You can also drag a bunch of selected notes the same way, by dragging.<br/><br/>Alternatively, you can <b>move selected</b> <b>notes</b> by pressing the <b>arrow keys</b> on your keyboard.<br/><br/>To <b>change the duration</b> of one (or many) note, select it, hold down <b>command or control</b> key, and hit the<b> left or right arrow key</b> on your keyboard. Each time you press an arrow key, the note will be resized in the direction the arrow points. (Try it! It&#146;s clearer when you see it)<br/><br/>You can <b>delete</b> selected notes by pressing <b>backspace or delete</b> keys on the keyboard.<br/><br/>
-You can move notes <b>one octave up or down</b> by using <b>shift + up/down</b> keys.</p>
+You can move notes <b>one octave up or down</b> by using <b>shift + up/down</b> keys, and to the <b>next or previous measure</b> with <b>shift + left/right</b> keys.</p>
 
 <!--             guitar         -->
 <br/><h2 align="center"><b><img src="docs/Aria man4.jpg"> Guitar Editor</b></h2><p align="center"><img src="docs/Aria man5.jpg"></p><p><br/>This editor allows you to edit your song as a guitar tablature. (If you don&#146;t know what tablature is, or don&#146;t play guitar, you probably won&#146;t be interested by this editor)<br/><br/>You may want to read the section about Piano editor, since everything from Piano editor also applies in Guitar editor.<br/><br/>In guitar editor, when you move a note up or down on the strings, it will keep the same fret number, and its pitch will adapt to its new string.<br/>If you want to <b>move a note vertically but keep same pitch</b> (for instance, 10 on A string has the same pitch as 5 on D string  and same pitch as 0 on G string) Aria can do that for you, simply select the note, <b>hold down command or control, and hit the up or down arrow</b> key. Nothing will happen if you are trying to move a note to a string where it cannot be played.<br/><br/>If you want to <b>change the fret number</b>, simply select a note a press the appropriate number key, either in the <b>num pad</b> at the right of the keyboard, or in the <b>numeric keys</b> at the top of the keyboard. For numbers higher than 9, you can hold down the shift key and press a number. For instance, shift+5 will be 15, shift+7 will give 17.<br/><br/>You can also change the <b>tuning of the guitar</b> by clicking on the string names on the left and selecting a new tuning.<br/><br/>If some notes, mainly from an imported midi file, or that were added in another editor, don&#146;t seem to be placed on the right strings (e.g. many notes are played simultaneously on the same string, or a chord that could be played on 3 consecutive strings in split, etc.) you can also choose "<b>Rearrange selected notes</b>" from the drop-menu when you click on the left part of the editor (the part with string names). It will attempt to rearrange notes in a more meaningful way. (Right now this feature is not completed and may not always give right results, but overall it&#146;s not bad)<br/><br/></p>
